# chatiplex

./: .gitignore  Cargo.toml  README.md
assets/: app.css  index.html
src/: lib.rs  main.rs
src/templates/: mod.rs
templates/: chat.askama.html  chats.askama.html  index.askama.html
